[tool.poetry]
name = "cadaha"
version = "0.1.0"
description = "Catwar Data Handler"
authors = ["TJesT <contacttjest@gmail.com>", "letteredMelody <rita.gnatenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
msgspec = "^0.18.6"
SQLAlchemy = "^2.0.36"
clickhouse-sqlalchemy = "^0.3.2"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
alembic = "^1.13.3"
pytest-alembic = "^0.11.1"
pytest-fastapi = "^0.1.0"
pytest-asyncio = "^0.24.0"
mypy = "^1.13.0"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
